--- a/package.json
+++ b/package.json
@@ -10,30 +10,37 @@
     "types:contentful": "export $(cat .env.local | awk '!/^\\s*#/' | awk '!/^\\s*$/'); cf-content-types-generator --spaceId $CONTENTFUL_SPACE_ID --token $CONTENTFUL_MANAGEMENT_TOKEN -o src/contentful/types -X && prettier --write src/contentful/types"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/poppins": "^5.0.8",
-    "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.2",
-    "@mui/material-nextjs": "^5.15.0",
-    "@tanstack/react-query": "^5.14.1",
-    "clsx": "^2.0.0",
+    "@contentful/rich-text-html-renderer": "^17.0.0",
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@contentful/rich-text-types": "^17.0.0",
+    "@emotion/cache": "11.14.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@fontsource/poppins": "5.2.5",
+    "@mui/icons-material": "6.4.6",
+    "@mui/material": "6.4.6",
+    "@mui/material-nextjs": "6.4.3",
+    "@mui/material-pigment-css": "6.4.6",
+    "@pigment-css/react": "^0.0.30",
+    "@tanstack/react-query": "5.66.11",
+    "clsx": "2.1.1",
     "contentful": "^10.6.14",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^10.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "cf-content-types-generator": "^2.13.0",
+    "cf-content-types-generator": "2.15.5",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
+    "postcss": "8.5.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.8.2"
   }
 }
