--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@fontsource/poppins": "5.2.5",
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@mui/icons-material": "6.4.6",
     "@mui/material": "6.4.6",
     "@mui/material-nextjs": "6.4.3",
@@ -24,11 +25,13 @@
     "@pigment-css/react": "^0.0.30",
     "@tanstack/react-query": "5.66.11",
     "clsx": "2.1.1",
-    "contentful": "^10.6.14",
-    "next": "14.0.4",
+    "contentful": "^10.15.2",
+    "next": "^14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-markdown": "^10.0.0",
+    "react-typed": "^2.0.12",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
@@ -38,9 +41,9 @@
     "autoprefixer": "^10.0.1",
     "cf-content-types-generator": "2.15.5",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14",
     "postcss": "8.5.3",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3",
     "typescript": "5.8.2"
   }
 }
