--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@fontsource/poppins": "5.2.5",
+    "@google-cloud/firestore": "^7.11.0",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@mui/icons-material": "6.4.6",
     "@mui/material": "6.4.6",
@@ -26,6 +27,7 @@
     "@tanstack/react-query": "5.66.11",
     "clsx": "2.1.1",
     "contentful": "^10.15.2",
+    "firebase": "^11.4.0",
     "next": "^14",
     "react": "^18",
     "react-dom": "^18",
