--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/poppins": "5.2.5",
     "@google-cloud/firestore": "^7.11.0",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "6.4.6",
     "@mui/material": "6.4.6",
     "@mui/material-nextjs": "6.4.3",
@@ -35,7 +36,8 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.0.0",
     "react-typed": "^2.0.12",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^20",
