fix: update contact form submission and Netlify configuration
- Add honeypot field for bot protection
- Update netlify.toml framework setting from 'nextjs' to 'next'
- Streamline form submission logic and fix endpoint URL
- Add netlify-cli dependency for development
- Update .gitignore to exclude .netlify folder

--- a/netlify.toml
+++ b/netlify.toml
@@ -36,7 +36,7 @@
   command = "yarn dev"
   port = 8888
   targetPort = 3000
-  framework = "nextjs"
+  framework = "next"
 
 # Ensure all form submissions are processed by Netlify
 [build.processing.html]
