--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cf-content-types-generator": "2.15.5",
     "eslint": "^8",
     "eslint-config-next": "^14",
+    "netlify-cli": "^22.2.1",
     "postcss": "8.5.3",
     "tailwindcss": "^3",
     "typescript": "5.8.2"
