--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "oxlint",
+    "format": "oxfmt",
     "tsc": "tsc --noEmit -p tsconfig.json",
     "types:contentful": "export $(cat .env.local | awk '!/^\\s*#/' | awk '!/^\\s*$/'); cf-content-types-generator --spaceId $CONTENTFUL_SPACE_ID --token $CONTENTFUL_MANAGEMENT_TOKEN -o src/contentful/types -X && prettier --write src/contentful/types"
   },
@@ -31,8 +33,11 @@
     "contentful": "^10.15.2",
     "firebase": "^11.4.0",
     "next": "^14",
-    "react": "^18",
-    "react-dom": "^18",
+    "npm-only-allow": "^1.2.6",
+    "oxfmt": "^0.15.0",
+    "oxlint": "^1.30.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.0.0",
     "react-typed": "^2.0.12",
