--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
