Add Stripe membership management system with Effect-TS
   Implement comprehensive membership management system integrating Stripe
   for payment processing and Firestore for data persistence.

   Features:
   - Effect-TS service layer with dependency injection
   - Stripe checkout session creation
   - Webhook handling for subscription lifecycle events
   - Membership status and plans API endpoints
   - Tagged error handling for granular error responses
   - Firestore security rules and composite indexes

   API Routes:
   - POST /api/checkout - Create checkout sessions
   - POST /api/webhooks/stripe - Handle Stripe webhooks
   - GET /api/membership/[userId] - Query membership status
   - GET /api/membership/plans - List available plans

   Services:
   - StripeService - Stripe API integration
   - FirestoreService - Firestore database operations
   - MembershipService - Business logic orchestration

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@contentful/rich-text-html-renderer": "^17.0.0",
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@contentful/rich-text-types": "^17.0.0",
+    "@effect/schema": "^0.75.5",
     "@emotion/cache": "11.14.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
@@ -31,6 +32,7 @@
     "@tanstack/react-query": "5.66.11",
     "clsx": "2.1.1",
     "contentful": "^10.15.2",
+    "effect": "^3.19.14",
     "firebase": "^11.4.0",
     "next": "^14",
     "npm-only-allow": "^1.2.6",
@@ -42,6 +44,7 @@
     "react-markdown": "^10.0.0",
     "react-typed": "^2.0.12",
     "remark-gfm": "^4.0.1",
+    "stripe": "^20.1.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
