--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
     "@mui/material-nextjs": "6.4.3",
     "@mui/material-pigment-css": "6.4.6",
     "@pigment-css/react": "^0.0.30",
+    "@tanstack/pacer": "^0.17.3",
+    "@tanstack/react-pacer": "^0.19.3",
     "@tanstack/react-query": "5.66.11",
     "clsx": "2.1.1",
     "contentful": "^10.15.2",
     "effect": "^3.19.14",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.6.0",
     "next": "^14",
     "npm-only-allow": "^1.2.6",
     "oxfmt": "^0.15.0",
     "oxlint": "^1.30.0",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
@@ -50,15 +55,18 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.14.7",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "cf-content-types-generator": "2.15.5",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "^14",
     "netlify-cli": "^22.2.1",
     "postcss": "8.5.3",
     "tailwindcss": "^3",
+    "tsx": "^4.21.0",
     "typescript": "5.8.2"
   }
 }
