fix(deps): downgrade Next.js 16 → 15 to resolve Turbopack bundling issue
- Downgrade next@16.1.5 → next@15.5.10
- Downgrade eslint-config-next to match
- Remove TURBOPACK=0 from build command (not needed in Next.js 15)
- Next.js 15 uses webpack by default, which properly handles serverExternalPackages
- Resolves hashed module names issue with firebase-admin and @google-cloud/firestore
- Next.js 16's Turbopack has known issues with serverExternalPackages on serverless platforms

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "chmod +x scripts/decrypt-credentials.sh && scripts/decrypt-credentials.sh && TURBOPACK=0 pnpm build"
+command = "chmod +x scripts/decrypt-credentials.sh && scripts/decrypt-credentials.sh && pnpm build"
 publish = ".next"
 functions = "netlify/functions"
 
