--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "effect": "^3.19.14",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.6.0",
+    "html-to-image": "^1.11.13",
     "next": "15.5.10",
     "npm-only-allow": "^1.2.6",
     "oxfmt": "^0.24.0",
