--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "effect-language-service patch",
     "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
@@ -22,7 +23,7 @@
     "@contentful/rich-text-html-renderer": "^17.0.0",
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@contentful/rich-text-types": "^17.0.0",
-    "@effect/schema": "^0.75.5",
+    "@effect/language-service": "^0.72.0",
     "@emotion/cache": "11.14.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
