feat(tsgo): add tsgo type-checker for local development
- Add @typescript/native-preview dependency
- Add tsgo script to package.json
- Add tsgo check step to CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
       - name: TypeScript check
         run: pnpm tsc
 
+      - name: TS GO check
+        run: pnpm tsgo
+
       - name: Run tests
         run: pnpm test:run
         # env:
