feat(db): install Drizzle ORM and Neon dependencies
- Add drizzle-orm, @neondatabase/serverless, @netlify/neon to dependencies
- Add drizzle-kit as dev dependency for schema management
- Add db:generate, db:migrate, db:push, db:studio scripts to package.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "test:watch": "vitest --watch",
     "tsc": "tsc --noEmit -p tsconfig.json",
     "tsgo": "tsgo --noEmit -p tsconfig.json",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "types:contentful": "export $(cat .env.local | awk '!/^\\s*#/' | awk '!/^\\s*$/'); cf-content-types-generator --spaceId $CONTENTFUL_SPACE_ID --token $CONTENTFUL_MANAGEMENT_TOKEN -o src/contentful/types -X && prettier --write src/contentful/types"
   },
   "dependencies": {
@@ -36,6 +40,8 @@
     "@mui/material": "6.4.6",
     "@mui/material-nextjs": "6.4.3",
     "@mui/material-pigment-css": "6.4.6",
+    "@neondatabase/serverless": "^1.0.2",
+    "@netlify/neon": "^0.1.2",
     "@pigment-css/react": "^0.0.30",
     "@tanstack/pacer": "^0.17.3",
     "@tanstack/react-pacer": "^0.19.3",
@@ -43,6 +49,7 @@
     "@typescript/native-preview": "7.0.0-dev.20260131.1",
     "clsx": "2.1.1",
     "contentful": "^10.15.2",
+    "drizzle-orm": "^0.45.1",
     "effect": "^3.19.14",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.6.0",
@@ -72,6 +79,7 @@
     "autoprefixer": "^10.0.1",
     "cf-content-types-generator": "2.15.5",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^8",
     "eslint-config-next": "15.5.10",
     "netlify-cli": "^22.2.1",
